# CQLite

./: CMakeLists.txt  README.md
src/: cqlite.c
src/REPL/: InputBuffer.c  InputBuffer.h  repl.c  repl.h
src/statements/: metaCommand.c  metaCommand.h  statement.c  statement.h
